completing roles examples

--- a/ansible/exercise/exercises-roles/roles/docker/files/nginx/default.conf.j2
+++ b/ansible/exercise/exercises-roles/roles/docker/files/nginx/default.conf.j2
@@ -3,7 +3,7 @@ server {
     server_name {{ public_url }};
 
     location / {
-        proxy_pass http://exercise-app:3000;
+        proxy_pass http://localhost:3000;
         include /etc/nginx/includes/proxy.conf;
     }
 }
