--- a/ansible/exercise/exercises-roles/roles/consul/templates/server_config.j2
+++ b/ansible/exercise/exercises-roles/roles/consul/templates/server_config.j2
@@ -20,6 +20,6 @@
     "ui_config": {
         "enabled": true
     },
-    "retry_join": ["provider=aws tag_key=role tag_value=consul"],
+    "retry_join": ["tag_key=role tag_value=consul"],
     "bootstrap_expect": 3
 }
