--- a/ansible/exercise/exercises-roles/roles/nomad/files/nomad.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/nomad.hcl.j2
@@ -34,6 +34,7 @@ consul {
   server_auto_join = true
 }
 
+# https://developer.hashicorp.com/nomad/docs/configuration/ui
 ui {
   enabled =  true
  
@@ -49,5 +50,12 @@ ui {
  
   consul {
     ui_url = "{{ consul_ui_url }}"
+  }
+}
+
+# https://developer.hashicorp.com/nomad/docs/configuration/plugin
+plugin "raw_exec" {
+  config {
+    enabled = true
   }
 }
