--- a/ansible/exercise/exercises-roles/roles/consul/templates/server_config.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/consul/templates/server_config.hcl.j2
@@ -19,5 +19,5 @@ client_addr = "0.0.0.0"
 ui_config {
     enabled = true
 }
-retry_join = {{ consul_servers }}
+retry_join = {{ consul_servers | tojson }}
 bootstrap_expect = 3
