--- a/ansible/exercise/exercises-roles/roles/nomad/files/server.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/server.hcl.j2
@@ -4,7 +4,7 @@ server {
   bootstrap_expect = 1
 
   server_join {
-    retry_join     = {{ nomad_servers }}
+    retry_join     = {{ nomad_servers | tojson }}
     retry_max      = 3
     retry_interval = "15s"
   }
