working on nomad cert

--- a/ansible/exercise/exercises-roles/roles/nomad/files/nomad.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/nomad.hcl.j2
@@ -10,7 +10,7 @@ tls {
   cert_file = "/etc/nomad.d/ssl/consul.cert"
   key_file = "/etc/nomad.d/ssl/consul.key"
 
-  verify_server_hostname = true
+  verify_server_hostname = false # should set true in production
   verify_https_client    = true
 }
 
