--- a/ansible/exercise/exercises-roles/roles/nomad/files/openssl.cnf.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/openssl.cnf.j2
@@ -8,7 +8,8 @@ CN = {{ nomad_domain }}
 
 [ v3_req ]
 keyUsage = keyEncipherment, dataEncipherment
-extendedKeyUsage = serverAuth
+extendedKeyUsage = serverAuth, clientAuth
+
 subjectAltName = @alt_names
 
 # add ip addresses here
