--- a/ansible/exercise/exercises-roles/roles/nomad/files/client.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/client.hcl.j2
@@ -23,13 +23,13 @@ tls {
   key_file = "/etc/nomad.d/ssl/nomad-client-key.pem"
 }
 
-# # https://developer.hashicorp.com/nomad/docs/configuration/consul
-# consul {
-#   address = "{{ consul_address }}"
-#   ca_file = "/etc/nomad.d/ssl/ca.pem"
-#   cert_file = "/etc/nomad.d/ssl/nomad-client.pem"
-#   key_file = "/etc/nomad.d/ssl/nomad-client-key.pem"
-#   ssl = true
-#   client_auto_join = true
-#   client_service_name = "nomad-client"
-# }
+# https://developer.hashicorp.com/nomad/docs/configuration/consul
+consul {
+  address = "{{ consul_address }}"
+  ca_file = "/etc/nomad.d/ssl/ca.pem"
+  cert_file = "/etc/nomad.d/ssl/nomad-client.pem"
+  key_file = "/etc/nomad.d/ssl/nomad-client-key.pem"
+  ssl = true
+  client_auto_join = true
+  client_service_name = "nomad-client"
+}
