--- a/ansible/exercise/exercises-roles/roles/consul/templates/server.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/consul/templates/server.hcl.j2
@@ -12,6 +12,7 @@ tls {
         key_file = "/etc/nomad.d/ssl/nomad-server-key.pem"
         verify_incoming = true
         verify_outgoing = true
+        verify_server_hostname = false 
     }
 }
 
