--- a/ansible/exercise/exercises-roles/roles/fabio/templates/nginx.conf.j2
+++ b/ansible/exercise/exercises-roles/roles/fabio/templates/nginx.conf.j2
@@ -6,13 +6,20 @@ upstream fabio_servers {
 
 server {
     listen 80;
-    server_name _;
+    server_name app.nomad.onxp.net;
 
     location / {
         proxy_pass http://fabio_servers;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include /etc/nginx/includes/proxy.conf;
+    }
+
+    location /nomad {
+        proxy_pass http://fabio_servers/nomad;
+        include /etc/nginx/includes/proxy.conf;
+    }
+
+    location /consul {
+        proxy_pass http://fabio_servers/consul;
+        include /etc/nginx/includes/proxy.conf;
     }
 }
