--- a/ansible/exercise/exercises-roles/roles/nomad/files/server.hcl.j2
+++ b/ansible/exercise/exercises-roles/roles/nomad/files/server.hcl.j2
@@ -27,9 +27,9 @@ tls {
 # https://developer.hashicorp.com/nomad/docs/configuration/consul
 consul {
   address = "{{ consul_address }}"
-  ca_file = "/etc/nomad.d/ssl/ca.pem"
-  cert_file = "/etc/nomad.d/ssl/nomad-client.pem"
-  key_file = "/etc/nomad.d/ssl/nomad-client-key.pem"
-  ssl = true
-  server_auto_join = true
+  # ca_file = "/etc/nomad.d/ssl/ca.pem"
+  # cert_file = "/etc/nomad.d/ssl/nomad-client.pem"
+  # key_file = "/etc/nomad.d/ssl/nomad-client-key.pem"
+  # ssl = true
+  # server_auto_join = true
 }
