update boundary ansible

--- a/ansible/exercise/exercises-roles/roles/boundary/templates/boundary.env.j2
+++ b/ansible/exercise/exercises-roles/roles/boundary/templates/boundary.env.j2
@@ -1,1 +1,1 @@
-POSTGRESQL_CONNECTION_STRING=postgresql://{{ pg_username }}}:{{ pg_password }}@{{ pg_host }}:5432/{{ pg_dbname }}
+POSTGRESQL_CONNECTION_STRING=postgresql://{{ pg_username }}:{{ pg_password }}@{{ pg_host }}:5432/{{ pg_dbname }}
