--- a/ansible/exercise/exercises-roles/roles/boundary/templates/openssl.cnf.j2
+++ b/ansible/exercise/exercises-roles/roles/boundary/templates/openssl.cnf.j2
@@ -1,17 +1,22 @@
 [ req ]
+default_bits       = 2048
+default_md         = sha256
 distinguished_name = req_distinguished_name
-x509_extensions = v3_req
-prompt = no
+req_extensions     = req_ext
+prompt             = no
 
 [ req_distinguished_name ]
-CN = {{ public_url }}
+countryName            = US
+stateOrProvinceName    = State
+localityName           = City
+organizationName       = Organization
+commonName             = {{ public_url }}
 
-[ v3_req ]
-keyUsage = keyEncipherment, dataEncipherment
-extendedKeyUsage = serverAuth, clientAuth
-
+[ req_ext ]
 subjectAltName = @alt_names
 
-# add ip addresses here
 [ alt_names ]
-IP.1 = {{ ansible_host }}
+DNS.1   = {{ public_url }}
+DNS.2   = localhost
+IP.1    = 127.0.0.1
+IP.2    = {{ ansible_host }}
